# AAC

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/: CODEOWNERS
doc/: doxy.conf
examples/: CMakeLists.txt  readSize.cpp
examples/eg/: CMakeLists.txt  access.cpp  approx-border.cpp  binary.cpp  blur-gray.cpp  choose-most-special.cpp  cvtGray.cpp  cycle-image-and-comp.cpp  edgeDetect.cpp  extractCenterline.cpp  get-contours.cpp  histogram.cpp  masking.cpp  morph-gray.cpp
examples/libpng/: CMakeLists.txt  clearImage.cpp  readSize.cpp  rgb2gray.cpp
examples/math/: CMakeLists.txt  convexHull.cpp
examples/ncurses/: CMakeLists.txt  chessboard.c
examples/pngload/: CMakeLists.txt  binary.cpp  blur-gray.cpp  choose-most-special.cpp  cvtGray.cpp  edgeDetect.cpp  masking.cpp
external-examples/: CMakeLists.txt
external-examples/CSE2035/: lines.cpp
external-examples/contrib/: README.txt
external-examples/contrib/libtests/.deps/: pngimage.Po  pngstest.Po  pngunknown.Po  pngvalid.Po  timepng.Po
external-examples/contrib/tools/.deps/: png-fix-itxt.Po  pngcp.Po  pngfix.Po
img2ascii/: CMakeLists.txt  rgb2gray.h
img2ascii/structure/: CMakeLists.txt  main-sa.cpp  main.cpp
img2ascii/tone/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/PNGLoader/: CMakeLists.txt  PNGExceptions.hpp  PNGLoader.cpp  PNGLoader.hpp  PNGMath.cpp  PNGMath.hpp  PNGMethods.hpp  blur.cpp  cvtGray.cpp  edgeDetect.cpp  effects.cpp
lib/eg/: CMakeLists.txt  egGeometry.cpp  egGeometry.hpp  egLoader.cpp  egLoader.hpp  egMath.cpp  egMath.hpp  egMethods.hpp  egOperators.cpp  egProcessing.cpp  egProcessing.hpp  egTool.cpp  egTool.hpp  egTrace.cpp  egTrace.hpp  egTypes.hpp
libpng-demo/: CMakeLists.txt
presentation/: References.bib  bs.tex  main.tex
report/: main.tex
tools/: README.txt  build.sh  copy-cmakes.sh  count-lines.sh
tools/ascii2image/: LICENSE.md  ascii-hangul-n  ascii2image.sh  hangul-rmse  hanguls-selected-rmse  install-fonts.sh
